# cc-sessions

./: Cargo.toml  flake.nix
docs/: design.md  implementation-plan.md
src/: archive.rs  build.rs  cache.rs  cli.rs  main.rs  meta.rs  model.rs  picker.rs  project.rs  scan.rs  stats.rs
tests/fixtures/: sample.jsonl
