[package]
name = "cc-sessions"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
skim = "0.10"

[profile.release]
strip = true
